// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - spring-boot addTestSpringFactory should add a test spring factory 1`] = `
{
  "src/test/resources/META-INF/spring.factories": {
    "contents": "key = first.value,second.value",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-boot source api editJavaFile with springBeans should match file content snapshot 1`] = `
{
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "contents": "package com.mycompany.myapp.config;

import org.springframework.boot.context.properties.ConfigurationProperties;

/**
 * Properties specific to JHipster.
 * <p>
 * Properties are configured in the {@code application.yml} file.
 * See {@link tech.jhipster.config.JHipsterProperties} for a good example.
 */
@ConfigurationProperties(prefix = "application", ignoreUnknownFields = false)
public class ApplicationProperties {
    private final SomeNestedProperties someNestedProperties = new SomeNestedProperties();
    private final Liquibase liquibase = new Liquibase();
    // jhipster-needle-application-properties-property

    public SomeNestedProperties getSomeNestedProperties() {
        return someNestedProperties;
    }

    public Liquibase getLiquibase() {
        return liquibase;
    }

    // jhipster-needle-application-properties-property-getter

    public static class SomeNestedProperties {

        private Boolean enabled = true;

        private String tag;

        public Boolean getEnabled() {
            return enabled;
        }


        public String getTag() {
            return tag;
        }


        public void setEnabled(Boolean enabled) {
            this.enabled = enabled;
        }

        public void setTag(String tag) {
            this.tag = tag;
        }
    }

    public static class Liquibase {

        private Boolean asyncStart = true;

        public Boolean getAsyncStart() {
            return asyncStart;
        }


        public void setAsyncStart(Boolean asyncStart) {
            this.asyncStart = asyncStart;
        }
    }

    // jhipster-needle-application-properties-property-class
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-boot with jwt should match generated files snapshot 1`] = `
{
  ".devcontainer/Dockerfile": {
    "stateCleared": "modified",
  },
  ".devcontainer/devcontainer.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/ApplicationWebXml.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/LoggingAspect.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/AsyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CRLFLogConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DateTimeFormatConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingAspectConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/StaticResourcesWebConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/WebConfigurer.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/AbstractAuditingEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/UserRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/DomainUserDetailsService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SpringSecurityAuditorAware.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UsernameAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/AdminUserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/SpaWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthorityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/PublicUserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/tls/keystore.p12": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback-spring.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/error.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/IntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TechnicalStructureTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/AsyncSyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CRLFLogConverterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/SpringBootTestClassOrderer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/StaticResourcesWebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/DomainUserDetailsServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/UserServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/filter/SpaWebFilterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AuthorityResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/PublicUserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/WithUnauthenticatedMockUser.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/junit-platform.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/testEmail.html": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-boot with oauth2 should match generated files snapshot 1`] = `
{
  ".devcontainer/Dockerfile": {
    "stateCleared": "modified",
  },
  ".devcontainer/devcontainer.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/ApplicationWebXml.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/LoggingAspect.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/AsyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CRLFLogConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DateTimeFormatConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingAspectConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/StaticResourcesWebConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/WebConfigurer.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/AbstractAuditingEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SpringSecurityAuditorAware.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/SpaWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/tls/keystore.p12": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback-spring.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/error.html": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/IntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TechnicalStructureTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/AsyncSyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CRLFLogConverterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/SpringBootTestClassOrderer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/StaticResourcesWebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/filter/SpaWebFilterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/WithUnauthenticatedMockUser.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/junit-platform.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;
